# jinja2-action

./: .dockerignore  .gitignore  Dockerfile  README.md  action.yml  entrypoint.py  entrypoint.sh  enums.py  main.py  pyproject.toml  unit-tests.py
.github/workflows/: ci.yml  experiment.yml
test/data-files/: data.env  data.ini  data.json  data.yml
test/env-variables/: expected  template
test/many-variables/: expected  template
test/simple/: template
test/whitespace/: expected  template
